tests/ui/whitespace/invalid_whitespace.stderr
error: unknown start of token: \u{200b}
  --> $DIR/invalid_whitespace.rs:10:10
   |
LL |     let a​= x + y;
   |          ^
   |
   = help: invisible characters like '\u{200b}' are not usually visible in text editors

error: aborting due to 1 previous error

